src/test/deca/context/valid/created/bool-op.deca
//Description :
// Test d'une opération booléenne
//
// Resultats :
//

{
    true && false ;
}
