src/test/deca/context/invalid/created/op-bool-incomp.deca
//Description :
// Test d'une opération booléenne sur types incompatbles
//
// Resultats :
// Erreur

{
    1 && false ;
}
